Small fixes and improvements
- Improved texture size calculation
- Fix material lighting
- Clean up and refactor a bit

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,4 +7,5 @@ ProjectID=8935A15F45994A6EE4288DA2EDE931FA
 
 [/Script/ComfyTextures.ComfyTexturesSettings]
 ComfyDir=(Path="C:/Users/alexa/Desktop/ComfyUI_windows_portable/ComfyUI")
+TextureQualityMultiplier=0.500000
 
