Support remote ComfyUI instance

--- a/Plugins/ComfyTextures/Content/Config/ComfyTextures.ini
+++ b/Plugins/ComfyTextures/Content/Config/ComfyTextures.ini
@@ -1,6 +1,5 @@
 [/Script/ComfyTextures.ComfyTexturesSettings]
-ComfyUrl=127.0.0.1:8188
-ComfyDir=C:\\ComfyUI_windows_portable\\ComfyUI\\
+ComfyUrl=http://127.0.0.1:8188
 MinTextureSize=64
 MaxTextureSize=4096
 TextureQualityMultiplier=0.5
